# MoonWave

./: .gitignore  README.md  barrels.config.ts  bun.lockb  cliff.toml  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
@types/: lucide-react.d.ts  overwrites.d.ts
scripts/: icon-data.js  icon-data.sh  install-ffmpeg.sh
src/: App.tsx  babel.js  events.ts  hotkeys.ts  index.css  index.tsx  overwrites.d.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  media_controls.rs  waveform.rs
src/actions/: addTracksToPlaylist.ts  bootstrap.ts  createPlaylist.ts  deletePlaylist.ts  editPlaylistTitle.ts  exit.ts  filterLibrary.ts  focusSearchInput.ts  minimize.ts  mute.ts  onAudioChangeDuration.ts  onAudioChangePosition.ts  onAudioChangeVolume.ts  onAudioEnded.ts  onAudioPause.ts  onAudioPlay.ts  onClickPlaylist.ts  onClickTrack.ts  onDoubleClickTrack.ts  onDragEndPlaylists.ts  onDragEndTracks.ts  onDragEnterPlaylist.ts  onDragLeavePlaylist.ts  onDragStartPlaylists.ts  onDragStartTracks.ts  onPlaybackSuccess.ts  openView.ts  pausePlayback.ts  playNext.ts  playPrev.ts  playTrack.ts  removeTracksFromPlaylist.ts  resetPlaylistIcon.ts  resumePlayback.ts  savePlaylistTitle.ts  seekTo.ts  setMode.ts  setPlaylistColor.ts  setPlaylistIcon.ts  setThemeMode.ts  (+11 more)
src/components/: AudioWaveIcon.css  AudioWaveIcon.tsx  Button.tsx  CommandMenu.tsx  FadeInOut.tsx  Ghost.tsx  IconColors.tsx  Icons.tsx  Kbd.tsx  Logo.tsx  Pressed.tsx  Spinner.tsx
src/config/: colors.ts  config.ts  easings.ts  extensions.ts  icons.ts  shortcuts.ts  sizes.ts  themes.ts
src/effects/: cursor.ts  mediaSession.ts  modals.ts  theme.ts  trackHistory.ts  windowShadows.ts
src/hooks/: useEnterExitTransition.ts  useModal.ts  useTable.ts  useTransition.ts  useWhile.ts
src/state/: audio.ts  config.ts  currentTrackDuration.ts  currentTrackPosition.ts  didLoadLibrary.ts  draggingPlaylistIds.ts  dropPlaylistBounds.ts  dropPlaylistElement.ts  dropPlaylistId.ts  dropPlaylistSide.ts  editingPlaylistId.ts  focusedView.ts  hasNextTrack.ts  hasPrevTrack.ts  hasTrack.ts  isDraggingPlaylists.ts  isDraggingTracks.ts  isFocused.ts  isMinimized.ts  isMuted.ts  isPlaying.ts  isPreparingSync.ts  isSyncing.ts  loadedAudioMetadata.ts  nextPlayedTrackIds.ts  playedTrackIds.ts  playingMode.ts  playingTrackId.ts  playingTracks.ts  playingView.ts  playlistColor.ts  playlists.ts  playlistsById.ts  prevPlayedTrackIds.ts  sidebarItems.ts  sidebarLSM.ts  sortedTrackIds.ts  state.ts  syncGoal.ts  syncProgress.ts  (+16 more)
src/themes/: catppuccin-dark.css  catppuccin-light.css  colors.css  dusk-dark.css  dust-light.css  gruvbox-dark.css  gruvbox-light.css  kanagawa-dark.css  moon-dark.css  moonwave-dark.css  moonwave-light.css  (+7 more)
(+680 files in other folders)
