[package]
name = "moonwave"
version = "0.5.0"
authors = [ "Michael Ostermann <michaelostermann@me.com>" ]
repository = "https://github.com/MichaelOstermann/MoonWave"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moonwave_lib"
crate-type = [
    "staticlib",
    "cdylib",
    "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "devtools"
] }
tauri-plugin-shell = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# Non-Tauri dependencies
ring = "0.17.14"
lofty = "0.22.2"
new_mime_guess = "4.0.4"
trash = "5.2.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
